--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,10 @@
   <!-- End of Logo -->
 
   <!-- Search -->
-
+  <div class="search-content">
+    <input type="text" placeholder="Enter your Search Term" />
+    <button type="button">Search</button>
+  </div>
   <!-- End of Search -->
 
   <!-- Categories -->
