--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,33 @@
   <!-- End of Search -->
 
   <!-- Categories -->
-
+  <div class="categories">
+    <span>Category</span>
+    <span>Category</span>
+    <span>Category</span>
+  </div>
   <!-- End of Categories -->
+
+  <!-- Jokes -->
+  <div class="joke-wrapper">
+    <div class="joke">
+      <img src="../assets/img/Jokes-about-Chuck-Norris-1024x683.jpg" alt="" />
+      <p>Funny Jokes</p>
+    </div>
+  </div>
+  <div class="joke-wrapper">
+    <div class="joke">
+      <img src="../assets/img/Jokes-about-Chuck-Norris-1024x683.jpg" alt="" />
+      <p>Funny Jokes</p>
+    </div>
+  </div>
+  <div class="joke-wrapper">
+    <div class="joke">
+      <img src="../assets/img/Jokes-about-Chuck-Norris-1024x683.jpg" alt="" />
+      <p>Funny Jokes</p>
+    </div>
+  </div>
+
+  <!-- End of Jokes -->
 </div>
 <!--End of Main Content-->
