styles all contents

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,9 +17,9 @@
 
   <!-- Categories -->
   <div class="categories">
-    <span>Category</span>
-    <span>Category</span>
-    <span>Category</span>
+    <span class="category">Category</span>
+    <span class="category"> Category </span>
+    <span class="category">Category</span>
   </div>
   <!-- End of Categories -->
 
